@@ -39,6 +39,7 @@ init:
         
 	.area	_DATA
         .area   _BSS
+        .area   _HEAP
 
         .area   _CODE
 __clock::
